--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -85,7 +85,7 @@ type: Opaque
 stringData:
   {{- range $client := .Values.auth.oidc.clients }}
   {{ $client.name }}_auth_config.json: |-
-    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "NAME" $client.name }}
+    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ROBOT_IDS" $client.robot_ids | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "NAME" $client.name }}
   {{ end }}
 
 ---
