--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -17,12 +17,15 @@ auth:
       - name: "panda_dev"
         client_id: "FIXME"
         client_secret: "FIXME"
+        robot_ids: "FIXME"
       - name: "Rubin"
         client_id: "FIXME"
         client_secret: "FIXME"
+        robot_ids: "FIXME"
       - name: "Rubin.production"
         client_id: "FIXME"
         client_secret: "FIXME"
+        robot_ids: "FIXME"
 
 
 msgsvc:
