Corrected dev db names

--- a/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
@@ -10,8 +10,8 @@ spec:
 
   bootstrap:
     initdb:
-      database: panda
-      owner: rubin
+      database: panda_db
+      owner: panda
       secret:
         name: usdf-panda-server-dev-creds
   
