--- a/rubin-panda-db-deploy/overlays/idds/dev/main/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/dev/main/cnpg-panda-idds-database.yaml
@@ -11,7 +11,7 @@ spec:
   bootstrap:
     initdb:
       database: idds
-      owner: rubin
+      owner: panda
       secret:
         name: usdf-panda-idds-dev-creds
   
