adding missing pg_hba parameters for dev cluster

--- a/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
@@ -30,6 +30,15 @@ spec:
       shared_buffers: 2GB
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
+    pg_hba:
+      - local all panda trust
+      - host all panda localhost trust
+      - local all postgres trust
+      - host all postgres localhost trust
+      - host all all 0.0.0.0/0 md5
+      - host all all ::0/0 md5
+      - host all postgres 0.0.0.0/0 reject
+      - host all postgres ::0/0 reject
 
   resources:
     requests:
