update harvester min workers

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -283,7 +283,7 @@
       "templateQueueName": "production.pull",
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":50,
-      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":200,
       "nQueueLimitJobMin":100,
@@ -309,7 +309,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 4000,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -336,7 +336,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 3000,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -347,7 +347,7 @@
 	  "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "rubin_medium",
+          "ceQueueName": "rubin",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
@@ -363,7 +363,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 2500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -390,7 +390,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 1500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -417,7 +417,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 200,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -490,7 +490,7 @@
       "templateQueueName": "production.pull",
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":50,
-      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":200,
       "nQueueLimitJobMin":100,
@@ -513,7 +513,7 @@
       "templateQueueName": "production.pull",
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":50,
-      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":200,
       "nQueueLimitJobMin":100,
@@ -539,7 +539,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 3000,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -565,7 +565,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 2500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -591,7 +591,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 1500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -617,7 +617,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 200,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -643,7 +643,7 @@
       "templateQueueName": "production.pull",
       "maxWorkers": 1000,
       "maxNewWorkersPerCycle":50,
-      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":200,
       "nQueueLimitJobMin":100,
@@ -666,7 +666,7 @@
       "templateQueueName": "production.pull",
       "maxWorkers": 1000,
       "maxNewWorkersPerCycle":50,
-      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMin":1,
       "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":200,
       "nQueueLimitJobMin":100,
@@ -692,7 +692,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 3000,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -718,7 +718,7 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 2500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -744,7 +744,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 1500,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
@@ -770,7 +770,7 @@
     "templateQueueName": "production.push",
     "maxWorkers": 200,
     "maxNewWorkersPerCycle":50,
-    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMin":1,
     "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":200,
     "nQueueLimitJobMin":100,
