FrDF change queue htc to lsst,UKDF change grid7 to grid

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -498,7 +498,7 @@
       "nQueueLimitWorker": 200,
 
       "submitter": {
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -524,7 +524,7 @@
 	  "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
           "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -550,7 +550,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
           "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -576,7 +576,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -602,7 +602,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -628,7 +628,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -651,7 +651,7 @@
       "nQueueLimitWorker":200,
 
       "submitter": {
-	  "ceQueueName": "grid7",
+	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -677,7 +677,7 @@
 	  "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -703,7 +703,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -729,7 +729,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -755,7 +755,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -781,7 +781,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
