--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -496,7 +496,7 @@
       "nQueueLimitWorker":200,
 
       "submitter": {
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -522,7 +522,7 @@
 	  "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
           "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -548,7 +548,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -574,7 +574,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -600,7 +600,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -626,7 +626,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "htc",
+          "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
           "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
@@ -649,7 +649,7 @@
       "nQueueLimitWorker":200,
 
       "submitter": {
-	  "ceQueueName": "grid7",
+	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -675,7 +675,7 @@
 	  "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -701,7 +701,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -727,7 +727,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PULL",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -753,7 +753,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
@@ -779,7 +779,7 @@
           "nCore": 1,
           "nCorePerNode": 1,
           "submitMode": "PUSH",
-          "ceQueueName": "grid7",
+          "ceQueueName": "grid",
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
