--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -651,8 +651,8 @@
       "submitter": {
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
-          "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+          "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
@@ -677,8 +677,8 @@
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
-          "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+          "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
@@ -703,8 +703,8 @@
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
-	  "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+	  "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
@@ -729,8 +729,8 @@
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
-	  "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+	  "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
@@ -755,8 +755,8 @@
           "submitMode": "PUSH",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
-	  "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+	  "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
       }
   },
@@ -781,8 +781,8 @@
           "submitMode": "PUSH",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
-	  "ceHostname": "grendel.hec.lancs.ac.uk",
-          "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
+	  "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
       }
   },
