Addition of env vars to make the new version of bigpandamon work for Rubin

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -25,6 +25,8 @@ stringData:
   BIGMON_DEBUG: "False"
   {{- end }}
 
+  LOGS_PROVIDER: "{{ .Values.bigmon.logs_provider | default "rucio" }}"
+
   # Auth
   BIGMON_AUTH_PROVIDER_LIST: {{ join "," $auth_providers | quote}}
   {{- range $provider, $v := .Values.bigmon.auth.providers }}
@@ -69,10 +71,13 @@ stringData:
   CRIC_API_URL: "http://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/panda_queues.json"
   {{- end }}
 
-  # AWS
-  {{- if hasKey .Values "aws" }}
-  AWS_ACCESS_KEY_ATLAS: "{{ .Values.aws.accessKey }}"
-  AWS_SECRET_KEY_ATLAS: "{{ .Values.aws.secretKey }}"
+  # OBJECT_STORE
+  {{- if hasKey .Values "object_store" }}
+  host_name: "{{ .Values.object_store.host }}"
+  port: "{{ .Values.object_store.port }}"
+  bucket_name: "{{ .Values.object_store.bucket }}"
+  access_key: "{{ .Values.object_store.accesskey }}"
+  secret_key: "{{ .Values.object_store.secretkey }}"
   {{- end }}
 
   {{ include "set_proxy" . | indent 2 }}
