--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -111,15 +111,15 @@ bigmon:
   secretKey: "FIXME"
   debugMode: false
 
+  # logs provider - either rucio or cric
+  logs_provider: "FIXME"
+
   auth:
     providers:
       Google:
         key: "FIXME"
         secret: "FIXME"
       CERNOIDC:
-        key: "FIXME"
-        secret: "FIXME"
-      AWS:
         key: "FIXME"
         secret: "FIXME"
       github:
@@ -174,6 +174,13 @@ cric:
   schedConfig: "https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json"
   sites: "https://datalake-cric.cern.ch/api/atlas/site/query/?json"
   objectStores: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES"
+
+object_store:
+  host_name: "FIXME"
+  port: 443
+  bucket_name: "FIXME"
+  access_key: "FIXME"
+  secret_key: "FIXME"
 
 
 proxy:
