--- a/rubin-panda-db-deploy/overlays/panda/prod/backup.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/backup.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
-  name: usdf-panda-backup
+  name: usdf-panda-server-backup
 spec:
   immediate: true
   schedule: "0 0 0 * * *"
