--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -13,10 +13,10 @@ spec:
       endpointURL: https://s3dfrgw.slac.stanford.edu
       s3Credentials:
         accessKeyId:
-          name: s3-creds
+          name: s3-creds-panda
           key: ACCESS_KEY_ID
         secretAccessKey:
-          name: s3-creds
+          name: s3-creds-panda
           key: ACCESS_SECRET_KEY
   instances: 2
   primaryUpdateStrategy: unsupervised
