--- a/rubin-panda-db-deploy/overlays/panda/prod/kustomization.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/kustomization.yaml
@@ -17,7 +17,7 @@ secretGenerator:
   files:
   - etc/.secrets/username
   - etc/.secrets/password
-- name: s3-creds
+- name: s3-creds-panda
   options:
     disableNameSuffixHash: true
   files:
