--- a/rubin-panda-db-deploy/overlays/idds/prod/main/kustomization.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/main/kustomization.yaml
@@ -17,7 +17,7 @@ secretGenerator:
   files:
   - etc/.secrets/username
   - etc/.secrets/password
-- name: s3-creds
+- name: s3-creds-idds
   options:
     disableNameSuffixHash: true
   files:
