--- a/helm/panda/charts/server/templates/statefulset.yaml
+++ b/helm/panda/charts/server/templates/statefulset.yaml
@@ -86,7 +86,7 @@ spec:
               chmod +x /data/panda/run-panda-crons;
               chmod +x /data/panda/run-panda-services;
               mkdir -p /var/log/panda/pandacache/jedilog; chmod -R 777 /var/log/panda/pandacache || true;
-              python /data/panda/process_template.py;
+              /opt/panda/bin/python /data/panda/process_template.py;
               /data/panda/run-panda-services;
               sleep infinity & wait
           {{- end }}
