Various improvements for the CNPG databases. Namely: - Changes max_connections to 1000 - Added annotation to pooler to be able to see connections in Grafana (via prometheus) - Changes the iDDS pooler to be a transaction one.

--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-pooler.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-pooler.yaml
@@ -31,7 +31,9 @@ spec:
     metadata:
       labels:
         app: pooler
-    
+      annotations:
+        prometheus.io/scrape: 'true'
+
     spec:
     
       containers:
