--- a/rubin-panda-db-deploy/overlays/idds/dev/main/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/dev/main/cnpg-panda-idds-database.yaml
@@ -27,6 +27,7 @@ spec:
   postgresql:
     parameters:
       shared_buffers: 2GB
+      max_connections: "1000"
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
 
