--- a/rubin-panda-db-deploy/overlays/idds/prod/main/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/main/cnpg-panda-idds-database.yaml
@@ -38,6 +38,7 @@ spec:
   postgresql:
     parameters:
       shared_buffers: 16GB
+      max_connections: "1000"
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
 #      ldap:
