--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -44,6 +44,7 @@ spec:
     shared_preload_libraries: [ 'pg_cron', 'pg_partman_bgw' ]
     parameters:
       shared_buffers: 16GB
+      max_connections: "1000"
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
     pg_hba:
