--- a/helm/harvester/values/values-lsst-prod.yaml
+++ b/helm/harvester/values/values-lsst-prod.yaml
@@ -12,6 +12,12 @@ harvester:
     selector: false
     size: 300Gi
 
+  persistentvolumecondor:
+    class: wekafs--sdf-k8s01
+    create: false
+    selector: false
+    size: 3000Gi
+
   experiment: "lsst_prod"
   panda:
     host: "panda-server:443"
