--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -34,6 +34,13 @@ persistentvolume:
   size: 5Gi
   selector: true
 
+persistentvolumecondor:
+  create: true
+  class: manual
+  path: "/mnt/harvester-condor-logs"
+  size: 5Gi
+  selector: true
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
