--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -43,10 +43,11 @@ spec:
   postgresql:
     shared_preload_libraries: [ 'pg_cron', 'pg_partman_bgw' ]
     parameters:
-      shared_buffers: 16GB
+      shared_buffers: 32GB
       max_connections: "1000"
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
+      work_mem: 128MB
     pg_hba:
       - local all rubin trust
       - host all rubin localhost trust
